ficked image background

--- a/index.html
+++ b/index.html
@@ -8,12 +8,33 @@
     <!-- import css: -->
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/global.css">
-    <title>Your App</title>
+    <title>Fantasy Jukebox</title>
 </head>
 
 <body>
-    Implement you app here, <a href="demo.html">See the demo</a>
+    <Header>
+        <h1>Fantasy Figures</h1>
+    </Header>
+<template id="template">
+    <li>
+        <h2 class="outline"><</h2>
+        <img src="">
+        <button id="sound-button">▶️</button>
+    </li>
+</template>
+    <main>
+        <div>
+        <ul id="figures-list">
+            
+            
+        </ul>
+        <audio id="audio"></audio>
+        </div>
+    </main>
 
+    <footer>
+
+    </footer>
     <script src="app.js" type="module"></script>
 </body>
 
